Some junit unit tests added